--- a/StartingCss/LightBox.css
+++ b/StartingCss/LightBox.css
@@ -8,10 +8,11 @@
  transition: all 2s ease-in-out;
 }
 #lightbox:target{
+ 
     height: 30%;
     width: 30%;
     top: 25%;
     left: 25%;
     background-color: lightgray;
-
+}
 
